--- a/cleone/style/style.css
+++ b/cleone/style/style.css
@@ -551,11 +551,11 @@ button.slick-next.slick-arrow {
 }
 
 .slick-prev:before {
-    content: 'â† Previous';
+    content: 'ÃƒÂ¢Ã¢â‚¬Â Ã‚Â Previous';
 }
 
 .slick-next:before {
-    content: 'Next â†’';
+    content: 'Next ÃƒÂ¢Ã¢â‚¬Â Ã¢â‚¬â„¢';
     display: flex;
 }
 
@@ -903,7 +903,7 @@ ul.tabs li.current {
 
 .tracking h1 {
     font-size: 36px;
-    font-family: Century;
+    /* font-family: Century; */
     text-align: center;
     margin-bottom: 30px;
 }
@@ -1231,3 +1231,56 @@ h2.pageheadingss {
 }
 
 .questionsAnserws h6.active::after {content: "-";}
+.menuInnerContainerSlip {
+    position: fixed;
+    z-index: 9999;
+    /* background: red; */
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.crosssed {
+    flex: 0 80%;
+    background: black;
+    opacity: 0.4;
+}
+
+.menuInnerContainerSlip ul {
+    width: 20%;
+    background: #fff;
+    padding: 6% 0px;
+    height: 100%;
+    overflow: auto;
+    overflow-x: hidden;
+}
+
+.menuInnerContainerSlip li a {
+    display: block;
+    margin-bottom: 20px;
+    font-size: 16px;
+    color: #000;
+    text-transform: capitalize;
+    caption-side: ;
+    position: relative;
+    padding: 0px 40px;
+}
+
+.menuInnerContainerSlip li.active a {
+    color: #D8BE8B;
+}
+
+.menuInnerContainerSlip li.has-children {
+    position: relative;
+}
+
+.menuInnerContainerSlip li.has-children a:after {content: "";display: block;width: 6px;height: 6px;border: 2px solid #000;transform: rotate(-45deg);position: absolute;right: 0;border-top: 0;border-left: 0;top: 0;bottom: 0;margin: auto;right: 20px;}
+
+li.registerandlogin a {
+    border: 1px solid #000;
+    border-left: 0;
+    border-right: 0;
+    padding: 15px 40px;
+}
