--- a/cleone/style/media.css
+++ b/cleone/style/media.css
@@ -547,6 +547,13 @@
         font-size: 22px;
         font-weight: 600;
     }
+    .crosssed {
+        flex: 0 20%;
+    }
+
+    .menuInnerContainerSlip ul {
+        width: 80%;
+    }
     
 }
 
